2.02-Project-v1.0/manifests/simple-todo-app-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-todo-app-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-todo-app-backend
  template:
    metadata:
      labels:
        app: simple-todo-app-backend
    spec:
      containers:
        - name: simple-todo-app-backend
          image: mickeckemi21/simple-todo-app-backend:2.02
