2.02-Project-v1.0/manifests/simple-todo-app-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-todo-app-backend-svc
spec:
  type: ClusterIP
  selector:
    app: simple-todo-app-backend
  ports:
    - port: 8282
      protocol: TCP
      targetPort: 8080
