2.02-Project-v1.0/manifests/simple-todo-app-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-todo-app-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: simple-todo-app-frontend
  ports:
    - port: 8484
      protocol: TCP
      targetPort: 80
